--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.7.2",
-    "vite": "^6.1.0"
+    "shiki": "3.1.0",
+    "typescript": "5.7.2",
+    "vite": "6.1.0"
   },
   "dependencies": {
     "livjs": "0.2.2"
