--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "imports": {
+    "#src/*": "./src/*"
+  },
   "devDependencies": {
     "shiki": "3.1.0",
     "typescript": "5.7.2",
