--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "imports": {
-    "#src/*": "./src/*"
+    "#src/*": "./src/*",
+    "#components/*": "./src/components/*"
   },
   "devDependencies": {
     "shiki": "3.1.0",
