--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/node": "22.13.9",
     "shiki": "3.1.0",
     "typescript": "5.7.2",
-    "vite": "6.1.0"
+    "vite": "6.1.0",
+    "@vanilla-extract/vite-plugin": "5.0.1"
   },
   "dependencies": {
+    "@vanilla-extract/css": "1.17.1",
     "livjs": "0.51.1"
   }
 }
